--- a/style/architect.css
+++ b/style/architect.css
@@ -106,6 +106,41 @@
   #quick-list{
     font-weight: 500;
   }
+  /* fratures section related styles */
+  .features{
+    gap:140px ;
+  }
+  #feature-section-title{
+ border-left: 5px solid #FF900E;
+ padding-left: 20px;
+  }
+  .feature-card .frature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+  .feature-card{
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+  }
+  #experience-badge{
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+
+  }
+  #experience-year{
+    font-size: 4rem;
+    font-weight: 700;
+  }
+  .featured-architect img{
+    width: 100%;
+  }
   /* some facts related card  */
   .facts-container{
     display: grid;
@@ -154,7 +189,8 @@
   @media screen and (max-width: 576px){
     .navbar, 
     .nav-links,
-    .teams
+    .teams,
+    .features
     
     {
       flex-direction: column;
@@ -173,6 +209,10 @@
   gap: 50px;
 }
   .our-features{
+    margin-left: 20px;
+  }
+  #experience-badge{
+    margin-top: 20px;
     margin-left: 20px;
   }
   }
